# molecular-krylov-pipeline

./: .gitignore  CLAUDE.md  Dockerfile  README.md  RESULTS.md  SPEC.md  docker-compose.yml  pyproject.toml
archive/: README.md
archive/tests/: bench_get_connections.py  bench_precompute.py  debug_connection_mismatch.py  test_phase6_level4.py
docs/: ADR-001-TODO.md  ADR-001-scale-to-40-qubits.md  ADR-002-close-40q-gaps.md  GENERATIVE-MODEL-SURVEY-2026-03.md  IMPLEMENTATION-TODO.md  LITERATURE-SURVEY-2026-Q1.md  NQS-VMC-SURVEY-2026-Q1.md  OPTIMIZATION-RESEARCH.md  TODO-ADR-002.md  TODO-PHASE-6-VALIDATION.md  TODO-PHASE-6.md  VMC-SIGN-PROBLEM-RESEARCH.md
examples/: iterative_refinement_scaling.py  large_system_benchmark.py  moderate_system_benchmark.py  nf_trained_comparison.py  subspace_comparison.py  validate_small_systems.py
src/: __init__.py  pipeline.py
src/flows/: __init__.py  autoregressive_flow.py  backflow.py  particle_conserving_flow.py  physics_guided_training.py  sign_network.py  vmc_training.py
src/hamiltonians/: __init__.py  base.py  molecular.py
src/krylov/: __init__.py  basis_sampler.py  nnci.py  skqd.py  sqd.py
src/nqs/: __init__.py  base.py  dense.py
src/postprocessing/: __init__.py  diversity_selection.py  eigensolver.py  projected_hamiltonian.py  utils.py
src/utils/: __init__.py  benchmark.py  config_hash.py  gpu_linalg.py  (+3 more)
tests/: __init__.py  conftest.py  test_24q_cr2_benchmark.py  test_24q_n2_benchmark.py  test_30q_benchmark.py  test_40q_benchmark.py  test_40q_iterative_refinement.py  test_autoregressive_flow.py  test_benchmark.py  test_cas_pipeline_integration.py  test_cas_support.py  test_config_hash.py  test_doubles_allocation.py  test_flows.py  test_gpu_pipeline.py  test_gumbel_topk.py  test_h_coupling.py  test_hamiltonians.py  test_iterative_refinement.py  test_krylov_adaptive.py  test_kv_cache.py  test_lanczos_reorth.py  test_mixed_precision.py  test_natural_orbitals.py  test_nf_architecture.py  test_nf_architecture_v2.py  test_nf_training_loss.py  test_nnci.py  test_nnci_pipeline.py  test_nqs.py  test_numba_connections.py  test_oom_fixes.py  test_perturbative_pruning.py  test_phase6_experiments.py  test_phase6_level2.py  test_phase6_level3.py  test_phase6_level5.py  test_phase6_smoke.py  test_phase_network.py  test_pipeline.py  (+13 more)
